2008-06-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmairix.el (nnmairix-delete-recreate-group)
	(nnmairix-update-and-clear-marks): Fix error messages.

2008-06-14  David Engster  <dengste@eml.cc>

	* nnmairix.el: Upgrade to version 0.6.  FIXME: Add entry on
	function/variable level.

	- It is now possible to propagate marks from the nnmairix groups
	  to the original messages (and for maildir also vice versa). See
	  the docs for details on this feature - it's pretty delicate
	  and currently needs a patched mairix binary to work smoothly.

	- Keep messages in nnmairix groups always read/unread
	  (bound to `G b r').

	- Recreate back end folder for nnmairix groups in case you
	  somehow get wrong article counts (bound to `G b d').

	- New group parameter `allow-fast'. Toggling of parameter bound to `G b
	  a'.  The default is nil, meaning that the group will always be
	  updated with a mairix search, even when only entered.

	- More/Better use of the registry (if available).  Can now also deal
	  with duplicate messages in different groups.

2008-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnir.el: Require edmacro when compiling with XEmacs.
	(nnir-run-find-grep): Don't use 3rd arg of `split-string' which is not
	available in Emacs 21.

2008-06-11  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (x-focus-frame):
	* gnus.el (image-size):
	* mm-decode.el (image-size): Declare.

	* gnus-picon.el (declare-function): Add compat definition.
	(image-size): Declare.

	* gnus-group.el (tool-bar-map):
	* gnus-sum.el (tool-bar-map): Define for compiler.

	* gnus-ems.el (gnus-x-splash): Check tool-bar-mode is bound.

	* nnfolder.el (gnus-intersection): Remove unnecessary autoload.

	* gnus-agent.el, gnus-cache.el, gnus-ems.el, gnus-group.el:
	* gnus-logic.el, gnus-msg.el, gnus-util.el, gnus.el, mail-source.el:
	* message.el, mm-decode.el, mm-encode.el, mm-view.el, mml.el:
	* mml1991.el, mml2015.el, nnfolder.el, nnheader.el, nnimap.el: